--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0"
   }
 }
